# basic-solana

./: Cargo.toml  README.md
actix-todo/: .env.example  Cargo.toml  docker-compose.yml
actix-todo/src/: config.rs  db.rs  handler.rs  main.rs  models.rs
blogs-oops/: Cargo.toml
blogs-oops/src/: lib.rs  main.rs
cargo_workspaces/: packages.rs
cargo_workspaces/add-one/src/: lib.rs
cargo_workspaces/adder/src/: main.rs
diesel-rust/: .env  Cargo.toml
diesel-rust/src/: lib.rs
minigrep/src/: lib.rs  main.rs
my_crates/: Cargo.toml
my_crates/src/: lib.rs  lib1.rs  main.rs  release_profiles.rs
rust-basics/: .gitignore  README.md
rust-basics/src/: flow.rs  main.rs  oops.rs  standard.rs
server/src/: lib.rs
src/: chapter10.rs  chapter13.rs  chapter15.rs  chapter16.rs  chapter17.rs  chapter18.rs  chapter19.rs  collections.rs  enums.rs  error.rs  functions.rs  main.rs  own_borrow.rs  structs.rs  types.rs
src/chapter10/: generics.rs  lifetimes.rs  traits.rs
src/chapter13/: closures.rs  iterators.rs
src/chapter15/: box_pointer.rs  deref.rs  drop.rs  interior_mutability.rs  reference_counting.rs  reference_cycles.rs
src/chapter16/: message_passing.rs  sharing_state.rs  threads.rs
src/chapter17/: oops.rs  trait_objects.rs
src/chapter18/: basic.rs  pattern_syntax.rs
src/chapter19/: advanced_fns_closures.rs  advanced_traits.rs  advanced_types.rs  macros.rs  unsafe_rust.rs
src/tests-example/: Cargo.toml
src/tests-example/src/: lib.rs
src/tests-example/tests/: integration_test.rs
src/tests-example/tests/common/: mod.rs
